@@ -56,32 +56,34 @@
     <maven.compiler.testRelase>${maven.compiler.testTarget}</maven.compiler.testRelase>
     <sonar.organization>jinahya-github</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-    <version.asciidoctorj>3.0.0-alpha.2</version.asciidoctorj>
-    <version.asciidoctorj-pdf>2.3.10</version.asciidoctorj-pdf>
-    <version.com.formdev>3.3</version.com.formdev>
-    <version.com.google.dagger>2.50</version.com.google.dagger>
-    <version.com.google.guava>33.0.0-jre</version.com.google.guava>
+    <version.asciidoctorj>3.0.0</version.asciidoctorj>
+    <version.asciidoctorj-pdf>2.3.18</version.asciidoctorj-pdf>
+    <!--    <version.com.formdev>3.3</version.com.formdev>-->
+    <version.com.formdev>3.5.1</version.com.formdev>
+    <version.com.google.dagger>2.52</version.com.google.dagger>
+    <version.com.google.guava>33.3.0-jre</version.com.google.guava>
     <version.maven-surefire>3.2.5</version.maven-surefire>
     <version.maven-failsafe>${version.maven-surefire}</version.maven-failsafe>
     <version.maven-javadoc-plugin>3.6.3</version.maven-javadoc-plugin>
-    <version.io.smallrye.reactive>2.5.6</version.io.smallrye.reactive>
-    <version.org.apache.openwebbeans>4.0.1</version.org.apache.openwebbeans>
-    <version.org.aspectj>1.9.21</version.org.aspectj>
-    <version.org.glassfish.hk2>4.0.0-M1</version.org.glassfish.hk2>
+    <version.io.smallrye.reactive>2.6.2</version.io.smallrye.reactive>
+    <version.org.apache.openwebbeans>4.0.2</version.org.apache.openwebbeans>
+    <version.org.aspectj>1.9.22.1</version.org.aspectj>
+    <version.org.glassfish.hk2>4.0.0-M3</version.org.glassfish.hk2>
     <version.org.hibernate.validator>8.0.1.Final</version.org.hibernate.validator>
     <version.org.jboss.weld>6.0.0.Alpha1</version.org.jboss.weld> <!-- weld-junit5 -->
     <version.org.jboss.weld-junit>4.0.1.Final</version.org.jboss.weld-junit> <!-- weld-se-core -->
     <version.org.jboss.weld.se>${version.org.jboss.weld}</version.org.jboss.weld.se> <!-- weld-se-core -->
-    <version.org.junit.jupiter>5.11.0</version.org.junit.jupiter>
-    <version.org.mockito>5.13.0</version.org.mockito>
-    <version.org.reactivestreams>1.0.4</version.org.reactivestreams>
+    <version.org.junit>5.11.1</version.org.junit>
+    <version.org.junit.jupiter>${version.org.junit}</version.org.junit.jupiter>
+    <version.org.mockito>5.14.1</version.org.mockito>
     <version.org.projectlombok>1.18.34</version.org.projectlombok>
-    <version.org.slf4j>2.1.0-alpha1</version.org.slf4j> <!-- https://search.maven.org/search?q=g:org.slf4j -->
+    <version.org.reactivestreams>1.0.4</version.org.reactivestreams>
+    <version.org.slf4j>2.1.0-alpha1</version.org.slf4j> <!-- https://central.sonatype.com/artifact/org.slf4j/slf4j-api -->
     <!-- https://docs.spring.io/spring-boot/docs/current/reference/html/dependency-versions.html -->
     <!-- https://docs.spring.io/spring-boot/appendix/dependency-versions/coordinates.html -->
-    <version.org.springframework>6.1.12</version.org.springframework>
-    <version.org.springframework.boot>3.3.3</version.org.springframework.boot>
-    <version.org.vertx>4.5.2</version.org.vertx>
+    <version.org.springframework>6.1.13</version.org.springframework>
+    <version.org.springframework.boot>3.3.4</version.org.springframework.boot>
+    <version.org.vertx>4.5.10</version.org.vertx>
   </properties>
 
   <dependencyManagement>
@@ -89,7 +91,7 @@
       <dependency><!-- https://search.maven.org/artifact/ch.qos.logback/logback-classic -->
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
-        <version>1.5.7</version>
+        <version>1.5.8</version>
       </dependency>
       <dependency>
         <groupId>com.formdev</groupId>
@@ -125,14 +127,21 @@
         <version>7.0.0</version>
       </dependency>
       <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>${version.org.junit}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
         <groupId>io.projectreactor</groupId>
         <artifactId>reactor-core</artifactId>
-        <version>3.6.2</version>
+        <version>3.6.10</version>
       </dependency>
       <dependency>
         <groupId>io.reactivex.rxjava3</groupId>
         <artifactId>rxjava</artifactId>
-        <version>3.1.8</version>
+        <version>3.1.9</version>
       </dependency>
       <dependency>
         <groupId>io.smallrye.reactive</groupId>
@@ -157,7 +166,7 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.14.0</version>
+        <version>3.17.0</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -173,6 +182,13 @@
         <groupId>org.apache.openwebbeans</groupId>
         <artifactId>openwebbeans-se</artifactId>
         <version>${version.org.apache.openwebbeans}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.openwebbeans.bom</groupId>
+        <artifactId>bom</artifactId>
+        <version>${version.org.apache.openwebbeans}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.asciidoctor</groupId>
@@ -195,9 +211,14 @@
         <version>${version.org.aspectj}</version>
       </dependency>
       <dependency>
+        <groupId>org.awaitility</groupId>
+        <artifactId>awaitility</artifactId>
+        <version>4.2.2</version>
+      </dependency>
+      <dependency>
         <groupId>org.bouncycastle</groupId>
         <artifactId>bcprov-lts8on</artifactId>
-        <version>2.73.4</version>
+        <version>2.73.6</version>
       </dependency>
       <dependency>
         <groupId>org.glassfish.hk2</groupId>
@@ -217,7 +238,6 @@
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
-        <version>${version.org.junit.jupiter}</version>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
@@ -226,21 +246,6 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <!--      <dependency>-->
-      <!--        <groupId>org.mockito</groupId>-->
-      <!--        <artifactId>mockito-core</artifactId>-->
-      <!--        <version>${version.org.mockito}</version>-->
-      <!--      </dependency>-->
-      <!--      <dependency>-->
-      <!--        <groupId>org.mockito</groupId>-->
-      <!--        <artifactId>mockito-inline</artifactId>-->
-      <!--        <version>${version.org.mockito.mockito-inline}</version>-->
-      <!--      </dependency>-->
-      <!--      <dependency>-->
-      <!--        <groupId>org.mockito</groupId>-->
-      <!--        <artifactId>mockito-junit-jupiter</artifactId>-->
-      <!--        <version>${version.org.mockito}</version>-->
-      <!--      </dependency>-->
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
@@ -322,6 +327,7 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
+      <version>${version.org.junit.jupiter}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -396,6 +402,14 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
           <version>3.6.1</version>
+          <!--          <executions>-->
+          <!--            <execution>-->
+          <!--              <goals>-->
+          <!--                <goal>properties</goal>-->
+          <!--              </goals>-->
+          <!--              <phase>initialize</phase>-->
+          <!--            </execution>-->
+          <!--          </executions>-->
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -500,17 +514,6 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.5.0</version>
         </plugin>
-        <!--
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-pmd-plugin</artifactId>
-          <version>3.21.2</version>
-          <configuration>
-            <targetJdk>${maven.compiler.target}</targetJdk>
-            <skipEmptyReport>false</skipEmptyReport>
-          </configuration>
-          </plugin>
-          -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
@@ -525,10 +528,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${version.maven-surefire}</version>
-          <!--          <configuration>-->
-          <!--            <forkNode>pertest</forkNode>-->
-          <!--            <reuseForks>false</reuseForks>-->
-          <!--          </configuration>-->
+          <configuration>
+            <!-- https://javadoc.io/doc/org.mockito/mockito-core/latest/org/mockito/Mockito.html#0.3 -->
+            <!--            <argLine>@{argLine} -XX:+EnableDynamicAgentLoading -javaagent:${org.mockito:mockito-core:jar}</argLine>-->
+            <!--            <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>-->
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -599,6 +603,18 @@
       </plugins>
     </pluginManagement>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>properties</goal>
+            </goals>
+            <phase>initialize</phase>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
